fixes slogan div spacing

--- a/styles.css
+++ b/styles.css
@@ -643,7 +643,7 @@ padding-right: 0px;*/
 
     #slogan {
       background: url(images/logoSm.png) center no-repeat;
-      max-height: 240px;
+      max-height: 200px;
     }
 
     #quotes {
